tech stack, buttons on vhp fxed,footer fixed, changed backgrond grey,

--- a/involoved/public/index.html
+++ b/involoved/public/index.html
@@ -12,7 +12,7 @@
 
     <title>🇺🇸Involved🇺🇸</title>
   </head>
-  <body>
+  <body className="Container">
     <div id="root"></div>
     <div id="info"></div>
 
